--- a/index.html
+++ b/index.html
@@ -2336,36 +2336,38 @@
             <a href="/" class="footer__logo">
               <img src="./images/footer-logo.svg" alt="Логотип Вешняки Мед" />
             </a>
-            <div class="footer__contact-item contacts__item">
-              <img
-                class="contacts__icon"
-                src="./images/footer-tel.svg"
-                alt=""
-              />
-              <div class="contacts__details">
-                <a href="tel:+74953701300" class="contacts__link"
-                  >+7 495 370-13-00</a
-                >
-                <p class="contacts__description">Звоните по любым вопросам</p>
+            <div class="footer__top-block">
+              <div class="footer__contact-item contacts__item">
+                <img
+                  class="contacts__icon"
+                  src="./images/footer-tel.svg"
+                  alt=""
+                />
+                <div class="contacts__details">
+                  <a href="tel:+74953701300" class="contacts__link"
+                    >+7 495 370-13-00</a
+                  >
+                  <p class="contacts__description">Звоните по любым вопросам</p>
+                </div>
               </div>
-            </div>
-            <div class="footer__contact-item contacts__item">
-              <img
-                class="contacts__icon"
-                src="./images/footer-email.svg"
-                alt=""
-              />
-              <div class="contacts__details">
-                <a href="mailto:zapis@veshnyakimed.ru" class="contacts__link"
-                  >zapis@veshnyakimed.ru</a
-                >
-                <p class="contacts__description">Пишите по любым вопросам</p>
+              <div class="footer__contact-item contacts__item">
+                <img
+                  class="contacts__icon"
+                  src="./images/footer-email.svg"
+                  alt=""
+                />
+                <div class="contacts__details">
+                  <a href="mailto:zapis@veshnyakimed.ru" class="contacts__link"
+                    >zapis@veshnyakimed.ru</a
+                  >
+                  <p class="contacts__description">Пишите по любым вопросам</p>
+                </div>
               </div>
-            </div>
-            <div class="footer__cta">
-              <button type="button" class="footer__cta-btn btn">
-                Записаться на приём
-              </button>
+              <div class="footer__cta">
+                <button type="button" class="footer__cta-btn btn">
+                  Записаться на приём
+                </button>
+              </div>
             </div>
           </div>
 
@@ -2451,6 +2453,7 @@
               </nav>
             </div>
             <div class="footer__column">
+              <h3 class="footer__column-title op">Навигация</h3>
               <nav class="footer-nav footer-nav--no-title">
                 <ul class="footer-nav__list">
                   <li class="footer-nav__item">
@@ -2479,14 +2482,13 @@
               </nav>
             </div>
             <div class="footer__column">
-              <div class="footer__info-block">
+              <div class="footer__info-block footer__info-block-1">
                 <h3 class="footer__column-title">Адрес клиники</h3>
                 <address class="footer__address">
                   Москва, ул. Вешняковская, д. 11А
                 </address>
                 <div class="footer__schedule">
-                  <span>пн–пт: 8:00–21:00</span>
-                  <span>сб–вс: 9:00–21:00</span>
+                  <p>пн–пт: 8:00–21:00 <br> сб–вс: 9:00–21:00</p>
                 </div>
               </div>
               <div class="footer__info-block">
