--- a/index.html
+++ b/index.html
@@ -98,12 +98,292 @@
                   Услуги
                   <img src="./images/arr-nav.svg" alt="" />
                 </a>
+
+                <div class="nav-menu__dropdown" id="services-popup">
+                  <div
+                    class="nav-menu__dropdown-container nav-menu__dropdown-container-usl"
+                  >
+                    <div class="usl-1">
+                      <h3>Услуги</h3>
+                      <nav>
+                        <ul>
+                          <li>
+                            <a href="">Стоматология</a>
+                          </li>
+                          <li>
+                            <a href="">Детская стоматология</a>
+                          </li>
+                          <li>
+                            <a href="">Лечение под наркозом</a>
+                          </li>
+                          <li>
+                            <a href="">Дерматология</a>
+                          </li>
+                          <li>
+                            <a href="">Врачебная косметология</a>
+                          </li>
+                          <li>
+                            <a href="">Ультразвуковая диагностика</a>
+                          </li>
+                          <li>
+                            <a href="">Массаж</a>
+                          </li>
+                          <li>
+                            <a href="">Мануальная терапия</a>
+                          </li>
+                          <li>
+                            <a href="">Лаборатория</a>
+                          </li>
+                          <li>
+                            <a href="">Процедурный кабинет</a>
+                          </li>
+                        </ul>
+                      </nav>
+                    </div>
+                    <div class="usl-2">
+                      <h3>Стоматология</h3>
+                      <nav>
+                        <ul>
+                          <li>
+                            <a href=""> Стоматология </a>
+                          </li>
+                          <li>
+                            <a href=""> Терапевтическая стоматология </a>
+                          </li>
+                          <li>
+                            <a href=""> Хирургия </a>
+                          </li>
+                          <li>
+                            <a href=""> Ортодонтия </a>
+                          </li>
+                          <li>
+                            <a href=""> Стоматология </a>
+                          </li>
+                          <li>
+                            <a href=""> Пародонтология </a>
+                          </li>
+                          <li>
+                            <a href=""> Ортопедия </a>
+                          </li>
+                          <li>
+                            <a href=""> Имплантология </a>
+                          </li>
+                        </ul>
+                      </nav>
+                    </div>
+                  </div>
+                </div>
               </li>
               <li class="nav-menu__item">
                 <a href="#" class="nav-menu__link nav-menu__link--dropdown">
                   Врачи
                   <img src="./images/arr-nav.svg" alt="" />
                 </a>
+
+                <div class="nav-menu__dropdown" id="doctors-popup">
+                  <div
+                    class="nav-menu__dropdown-container nav-menu__dropdown-container-2"
+                  >
+                    <h3>Врачи</h3>
+                    <div>
+                      <input type="text" name="" id="" placeholder="Введите специальность">
+                      <div class="header-grid">
+                        <div class="header-grid-item">
+                          <div>
+                            <p>А</p>
+                          </div>
+                          <ul>
+                            <li>
+                              <a href="">Акушер-гинеколог</a>
+                            </li>
+                            <li>
+                              <a href="">Алколог</a>
+                            </li>
+                            <li>
+                              <a href="">Аллерголог</a>
+                            </li>
+                            <li>
+                              <a href="">Андролог</a>
+                            </li>
+                          </ul>
+                        </div>
+                        <div class="header-grid-item">
+                          <div>
+                            <p>А</p>
+                          </div>
+                          <ul>
+                            <li>
+                              <a href="">Акушер-гинеколог</a>
+                            </li>
+                            <li>
+                              <a href="">Алколог</a>
+                            </li>
+                            <li>
+                              <a href="">Аллерголог</a>
+                            </li>
+                            <li>
+                              <a href="">Андролог</a>
+                            </li>
+                          </ul>
+                        </div>
+                        <div class="header-grid-item">
+                          <div>
+                            <p>с</p>
+                          </div>
+                          <ul>
+                            <li>
+                              <a href="">Акушер-гинеколог</a>
+                            </li>
+                            <li>
+                              <a href="">Алколог</a>
+                            </li>
+                          </ul>
+                        </div>
+                        <div class="header-grid-item">
+                          <div>
+                            <p>А</p>
+                          </div>
+                          <ul>
+                            <li>
+                              <a href="">Акушер-гинеколог</a>
+                            </li>
+                            <li>
+                              <a href="">Алколог</a>
+                            </li>
+                            <li>
+                              <a href="">Аллерголог</a>
+                            </li>
+                            <li>
+                              <a href="">Андролог</a>
+                            </li>
+                          </ul>
+                        </div>
+                        <div class="header-grid-item">
+                          <div>
+                            <p>А</p>
+                          </div>
+                          <ul>
+                            <li>
+                              <a href="">Акушер-гинеколог</a>
+                            </li>
+                            <li>
+                              <a href="">Алколог</a>
+                            </li>
+                            <li>
+                              <a href="">Аллерголог</a>
+                            </li>
+                            <li>
+                              <a href="">Андролог</a>
+                            </li>
+                          </ul>
+                        </div>
+                        <div class="header-grid-item">
+                          <div>
+                            <p>с</p>
+                          </div>
+                          <ul>
+                            <li>
+                              <a href="">Акушер-гинеколог</a>
+                            </li>
+                            <li>
+                              <a href="">Алколог</a>
+                            </li>
+                          </ul>
+                        </div>
+                        <div class="header-grid-item">
+                          <div>
+                            <p>А</p>
+                          </div>
+                          <ul>
+                            <li>
+                              <a href="">Акушер-гинеколог</a>
+                            </li>
+                            <li>
+                              <a href="">Алколог</a>
+                            </li>
+                            <li>
+                              <a href="">Аллерголог</a>
+                            </li>
+                            <li>
+                              <a href="">Андролог</a>
+                            </li>
+                          </ul>
+                        </div>
+                        <div class="header-grid-item">
+                          <div>
+                            <p>А</p>
+                          </div>
+                          <ul>
+                            <li>
+                              <a href="">Акушер-гинеколог</a>
+                            </li>
+                            <li>
+                              <a href="">Алколог</a>
+                            </li>
+                            <li>
+                              <a href="">Аллерголог</a>
+                            </li>
+                            <li>
+                              <a href="">Андролог</a>
+                            </li>
+                          </ul>
+                        </div>
+                        <div class="header-grid-item">
+                          <div>
+                            <p>с</p>
+                          </div>
+                          <ul>
+                            <li>
+                              <a href="">Акушер-гинеколог</a>
+                            </li>
+                            <li>
+                              <a href="">Алколог</a>
+                            </li>
+                          </ul>
+                        </div>
+                        <div class="header-grid-item">
+                          <div>
+                            <p>с</p>
+                          </div>
+                          <ul>
+                            <li>
+                              <a href="">Акушер-гинеколог</a>
+                            </li>
+                            <li>
+                              <a href="">Алколог</a>
+                            </li>
+                          </ul>
+                        </div>
+                        <div class="header-grid-item">
+                          <div>
+                            <p>с</p>
+                          </div>
+                          <ul>
+                            <li>
+                              <a href="">Акушер-гинеколог</a>
+                            </li>
+                            <li>
+                              <a href="">Алколог</a>
+                            </li>
+                          </ul>
+                        </div>
+                        <div class="header-grid-item">
+                          <div>
+                            <p>с</p>
+                          </div>
+                          <ul>
+                            <li>
+                              <a href="">Акушер-гинеколог</a>
+                            </li>
+                            <li>
+                              <a href="">Алколог</a>
+                            </li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </li>
               <li class="nav-menu__item">
                 <a href="#" class="nav-menu__link">Акции</a>
@@ -2488,7 +2768,10 @@
                   Москва, ул. Вешняковская, д. 11А
                 </address>
                 <div class="footer__schedule">
-                  <p>пн–пт: 8:00–21:00 <br> сб–вс: 9:00–21:00</p>
+                  <p>
+                    пн–пт: 8:00–21:00 <br />
+                    сб–вс: 9:00–21:00
+                  </p>
                 </div>
               </div>
               <div class="footer__info-block">
