--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                   Москва, ул. Вешняковская, д. 11А
                 </p>
                 <div class="location__schedule">
-                  <span>пн–пт: 8:00–21:00</span>
+                  <span>пн–пт: 8:00–21:00</span> <br>
                   <span>сб–вс: 9:00–21:00</span>
                 </div>
               </div>
