--- a/index.html
+++ b/index.html
@@ -3246,19 +3246,49 @@
               <h3 class="footer__column-title">Направления</h3>
               <nav class="footer-nav">
                 <ul class="footer-nav__list">
-                  <li class="footer-nav__item">
-                    <a href="#" class="footer-nav__link">Стоматология</a>
+                  <li class="footer-nav__item footer-nav__item--has-submenu">
+                    <a
+                      href="#"
+                      class="footer-nav__link footer-nav__link--toggle js-nav-toggle"
+                      aria-expanded="false"
+                      aria-controls="submenu-stomatology"
+                    >
+                      Стоматология
+                      <img
+                        src="./images/arr-down.svg"
+                        alt=""
+                        class="footer-nav__toggle-icon"
+                      />
+                    </a>
+                    <ul class="footer-nav__sublist" id="submenu-stomatology">
+                      <li class="footer-nav__sublist-item">
+                        <a href="#" class="footer-nav__sublist-link">Терапия</a>
+                      </li>
+                      <li class="footer-nav__sublist-item">
+                        <a href="#" class="footer-nav__sublist-link"
+                          >Хирургия</a
+                        >
+                      </li>
+                      <li class="footer-nav__sublist-item">
+                        <a href="#" class="footer-nav__sublist-link"
+                          >Ортопедия</a
+                        >
+                      </li>
+                    </ul>
                   </li>
+
                   <li class="footer-nav__item">
                     <a href="#" class="footer-nav__link"
                       >Детская стоматология</a
                     >
                   </li>
+
                   <li class="footer-nav__item">
                     <a href="#" class="footer-nav__link"
                       >Лечение под наркозом</a
                     >
                   </li>
+
                   <li class="footer-nav__item">
                     <a href="#" class="footer-nav__link">Дерматология</a>
                   </li>
