--- a/index.html
+++ b/index.html
@@ -83,6 +83,21 @@
                   />
                 </a>
               </li>
+              <li class="header-mob">
+                <a href="">
+                  <img src="./images/tel-mob.svg" alt="" />
+                </a>
+              </li>
+              <li class="header-mob">
+                <a href="">
+                  <img src="./images/email-mob.svg" alt="" />
+                </a>
+              </li>
+              <li>
+                <button class="burger">
+                  <img src="./images/burger-mob.svg" alt="" />
+                </button>
+              </li>
             </ul>
           </div>
         </div>
@@ -417,7 +432,7 @@
       </div>
     </header>
     <main>
-      <section class="hero-slider">
+      <section class="hero-slider" style="display: none">
         <ul class="hero-slider__wrapper">
           <li
             class="hero-slider__slide"
@@ -1894,6 +1909,7 @@
       </section>
       <section class="preim">
         <div class="wrapper">
+          <h2>Наши преимущества</h2>
           <div class="preim__cont">
             <div class="preim-grid">
               <div>
@@ -2721,6 +2737,21 @@
                 <img src="./images/yand.png" alt="" />
               </div>
               <div class="rating__cont-last">
+                <div class="rating-item__mob">
+                  <div class="rating-item__mob-0">
+                    <div class="rating-item__mob-1">
+                      <p>Хорошее место</p>
+                      <p>Выбор пользователей Яндекса — 2025</p>
+                    </div>
+                    <div class="rating-item__mob-2">
+                      <p>4,9</p>
+                      <img src="./images/black-stars.svg" alt="">
+                    </div>
+                  </div>
+                  <div>
+                    <img src="./images/yand-2.svg" alt="">
+                  </div>
+                </div>
                 <div class="rating-item">
                   <div>
                     <img src="./images/gis.svg" alt="" />
@@ -3029,7 +3060,6 @@
                 ><iframe
                   src="https://yandex.com/map-widget/v1/?ll=37.831803%2C55.737598&mode=search&oid=1198587957&ol=biz&z=16"
                   width="100%"
-                  height="589"
                   frameborder="1"
                   allowfullscreen="true"
                   style="position: relative"
@@ -3101,7 +3131,7 @@
           </div>
         </div>
       </section>
-      <section class="partners">
+      <section class="partners" style="display: none">
         <div class="wrapper">
           <h2>Партнёры</h2>
           <div class="partners-cont">
@@ -3120,7 +3150,7 @@
           </div>
         </div>
       </section>
-      <section class="lichenion">
+      <section class="lichenion" style="display: none">
         <div class="wrapper">
           <h2>Лицензии</h2>
           <div class="lichenion__cont">
@@ -3142,7 +3172,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
+    <footer class="footer" style="display: none">
       <div class="wrapper">
         <div class="footer__container">
           <div class="footer__top">
