--- a/index.html
+++ b/index.html
@@ -3131,7 +3131,7 @@
           </div>
         </div>
       </section>
-      <section class="partners" style="display: none">
+      <section class="partners">
         <div class="wrapper">
           <h2>Партнёры</h2>
           <div class="partners-cont">
@@ -3150,7 +3150,7 @@
           </div>
         </div>
       </section>
-      <section class="lichenion" style="display: none">
+      <section class="lichenion">
         <div class="wrapper">
           <h2>Лицензии</h2>
           <div class="lichenion__cont">
