--- a/usl.html
+++ b/usl.html
@@ -1115,6 +1115,21 @@
           <div class="rat-usl__container">
             <h2 class="rat-usl__title">Рейтинги клиники</h2>
             <div class="rat-usl__list">
+              <div class="rating-item__mob">
+                <div class="rating-item__mob-0">
+                  <div class="rating-item__mob-1">
+                    <p>Хорошее место</p>
+                    <p>Выбор пользователей Яндекса — 2025</p>
+                  </div>
+                  <div class="rating-item__mob-2">
+                    <p>4,9</p>
+                    <img src="./images/black-stars.svg" alt="" />
+                  </div>
+                </div>
+                <div>
+                  <img src="./images/yand-2.svg" alt="" />
+                </div>
+              </div>
               <div class="rat-usl__item">
                 <img
                   class="rat-usl__logo"
